Frontend: render grid from solutionGrid; Start Game fetches /api/generate-crossword and builds clues; fix timer update. Backend: robust /api/generate-crossword parsing + fallback minimal puzzle, fix SMTP message CRLF; minor prints cleanup.

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -12,6 +12,7 @@
         <!-- Header Bar -->
         <div class="header-bar">
             <div class="game-title">
+                <span id="timer">00:00</span>
                 <img src="./assets/crossythink_logo.png" alt="CrossyThink Logo" class="logo">
                 CrossyThink
             </div>
