Fix login flow: avoid API_BASE const redeclaration by using window.API_BASE; switch all auth/reset/gameplay fetches to window.API_BASE; minor HTML/script wiring remains unchanged.

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CrossyThink - Challenge your mind and explore the power of AI with CrossyThink — the next-generation crossword puzzle experience.</title>
+    <title>CrossyThink - Challenge your mind and explore the power of AI with CrossyThink — the next-generation
+        crossword puzzle experience.</title>
     <link rel="icon" type="image/png" href="./assets/crossythink_logo.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <div class="game-container">
         <!-- Header Bar -->
         <div class="header-bar">
             <div class="game-title">
-                <span id="timer">00:00</span>
+
                 <img src="./assets/crossythink_logo.png" alt="CrossyThink Logo" class="logo">
                 CrossyThink
+                <span id="timer">00:00</span>
             </div>
             <!-- Log in button -->
             <div class="user-registration">
@@ -25,7 +29,7 @@
         <!-- Main Game Area -->
         <div class="game-area">
             <!-- Left Clues Panel -->
-             <!-- insert the hints with AI generated content -->
+            <!-- insert the hints with AI generated content -->
             <div class="clues-panel">
                 <div class="clues-section">
                     <div class="clues-title">Across</div>
@@ -80,7 +84,7 @@
             </div>
 
             <!-- Right Clues Panel -->
-             <!-- insert the hints with AI generated content -->
+            <!-- insert the hints with AI generated content -->
             <div class="clues-panel">
                 <div class="clues-section">
                     <div class="clues-title">Down</div>
@@ -121,4 +125,5 @@
     <script src="./script/gameplay.js"></script>
     <script src="./script/auth.js"></script>
 </body>
+
 </html>
