Extract alerts to i18n: add en.js with English strings; replace hard-coded alerts/confirmations in gameplay.js; include en.js in gameplay.html.

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -122,6 +122,7 @@
         </div>
     </div>
 
+    <script src="./script/i18n/en.js"></script>
     <script src="./script/gameplay.js"></script>
     <script src="./script/auth.js"></script>
 </body>
