--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <script src="./script/i18n/en.js"></script>
+    <script src="./lang/en/en.js"></script>
     <script src="./script/gameplay.js"></script>
     <script src="./script/auth.js"></script>
 </body>
