Centralize UI strings in frontend/lang/en/en.js; i18n-ize auth modal, gameplay alerts/buttons/titles, reset page and messages; include en.js on reset page.

--- a/frontend/reset.html
+++ b/frontend/reset.html
@@ -10,26 +10,26 @@
 <body>
     <div class="auth-modal show">
         <div class="auth-modal-content">
-            <a href="./gameplay.html" class="close-btn" aria-label="Back to Game">&times;</a>
+            <a href="./gameplay.html" class="close-btn" id="resetCloseBtn" aria-label="Back to Game">&times;</a>
             <div class="auth-modal-body">
                 <div class="auth-form-section">
                     <div class="auth-form-header">
-                        <h2>Reset your password</h2>
-                        <p>Pick a new password to access your account.</p>
+                        <h2 id="resetHeader">Reset your password</h2>
+                        <p id="resetSubtitle">Pick a new password to access your account.</p>
                     </div>
                     <div id="msg" class="auth-message" style="display:none"></div>
                     <form id="resetForm" class="auth-form">
                         <div class="form-group">
-                            <label for="newPassword">New Password (6-15 chars)</label>
+                            <label for="newPassword" id="newPasswordLabel">New Password (6-15 chars)</label>
                             <input type="password" id="newPassword" name="password" required minlength="6" maxlength="15">
                         </div>
                         <div class="form-group">
-                            <label for="confirmPassword">Confirm Password</label>
+                            <label for="confirmPassword" id="confirmPasswordLabel">Confirm Password</label>
                             <input type="password" id="confirmPassword" name="confirmPassword" required minlength="6" maxlength="15">
                         </div>
                         <div class="form-actions">
-                            <button type="submit" class="btn btn-primary">Reset Password</button>
-                            <a class="btn btn-secondary" href="./gameplay.html">Back to Game</a>
+                            <button type="submit" class="btn btn-primary" id="resetSubmitBtn">Reset Password</button>
+                            <a class="btn btn-secondary" href="./gameplay.html" id="backToGameBtn">Back to Game</a>
                         </div>
                     </form>
                 </div>
@@ -37,13 +37,14 @@
                     <div class="logo-container">
                         <img src="./assets/crossythink_logo.png" alt="CrossyThink Logo" class="modal-logo">
                         <h3>CrossyThink</h3>
-                        <p>We’ll help you get back in.</p>
+                        <p id="resetRightPanel">We'll help you get back in.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <script src="./lang/en/en.js"></script>
     <script src="./script/reset.js"></script>
 </body>
 </html>
