Modularize gameplay: export CrosswordGame from gameplay.js and add ES module entry script/game/main.js; update gameplay.html to load module.

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -123,7 +123,7 @@
     </div>
 
     <script src="./lang/en/en.js"></script>
-    <script src="./script/gameplay.js"></script>
+    <script type="module" src="./script/game/main.js"></script>
     <script src="./script/auth.js"></script>
 </body>
 
