Change the board color to white. Delete expert difficulty. Fix modal bug.

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -18,8 +18,8 @@
 
                 <img src="./assets/crossythink_logo.png" alt="CrossyThink Logo" class="logo">
                 CrossyThink
-                <span id="timer">00:00</span>
             </div>
+            <div id="timer">00:00</div>
             <!-- Log in button -->
             <div class="user-registration">
                 <button class="btn btn-primary" id="signInBtn">Log In</button>
@@ -73,7 +73,6 @@
                             <option value="Easy">Easy</option>
                             <option value="Medium">Medium</option>
                             <option value="Hard">Hard</option>
-                            <option value="Expert">Expert</option>
                         </select>
                         <button class="btn btn-primary" id="startGameBtn">Start Game</button>
                     </div>
