feat: add API usage tracking, admin endpoints, frontend usage display; fix DB config; ignore __pycache__ and backend/instance; cleanup .env

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -53,6 +53,7 @@
                 </div>
                 <!-- Desktop buttons -->
                 <div class="user-registration desktop-only">
+                    <span id="apiUsage" class="api-usage" style="display:none; margin-right: 12px;"></span>
                     <button class="btn btn-primary" id="signInBtn">Log In</button>
                 </div>
             </div>
