feat(admin): add admin dashboard page to monitor per-user calls/tokens; show Admin link for admin users; CSV export and search

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -49,6 +49,7 @@
                 </div>
                 <!-- Desktop buttons -->
                 <div class="user-registration desktop-only">
+                    <a id="adminLink" href="./admin.html" class="btn btn-info" style="display:none; margin-right: 12px;">Admin</a>
                     <span id="apiUsage" class="api-usage" style="display:none; margin-right: 12px;"></span>
                     <button class="btn btn-primary" id="signInBtn">Log In</button>
                 </div>
