--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -41,6 +41,11 @@
                             <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
                         </svg>
                     </button>
+                    <button class="icon-btn" id="mobileDefsBtn" title="Definitions">
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M3 5h18v14H3zM7 9h10v2H7zM7 13h6v2H7z"/>
+                        </svg>
+                    </button>
                     <button class="icon-btn icon-btn-login" id="mobileSignInBtn" title="Log In">
                         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
@@ -61,6 +66,7 @@
             <button class="btn btn-large btn-warning" id="hintWordBtn">Hint</button>
             <button class="btn btn-large btn-success" id="checkWordBtn">Check Puzzle</button>
             <button class="btn btn-large btn-primary" id="newGameBtn">New Game</button>
+            <button class="btn btn-large btn-info" id="definitionsBtn">Definitions</button>
         </div>
 
         <!-- Main Game Area -->
@@ -108,6 +114,15 @@
         
         <!-- Backdrop for mobile clues panel -->
         <div class="clues-backdrop" id="cluesBackdrop"></div>
+
+        <!-- Definitions Overlay (transparent over grid) -->
+        <div class="defs-overlay" id="defsOverlay" aria-hidden="true">
+            <div class="defs-card" role="dialog" aria-modal="true" aria-labelledby="defsTitle">
+                <button class="defs-close" id="defsCloseBtn" aria-label="Close">&times;</button>
+                <h3 id="defsTitle">Definitions</h3>
+                <div id="defsOverlayList" class="defs-list"></div>
+            </div>
+        </div>
     </div>
 
     <script src="./lang/en/en.js"></script>
