--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -105,9 +105,9 @@
             </div>
         </div>
 
-        <!-- Clues Panel Toggle Button (Mobile Only) -->
-        <button class="clues-toggle-btn" id="cluesToggleBtn">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <!-- Clues Panel Toggle Button (Mobile & iPad) -->
+        <button class="clues-toggle-btn" id="cluesToggleBtn" title="Show Clues">
+            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="9 18 15 12 9 6"></polyline>
             </svg>
         </button>
