add important file for hosting

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -47,7 +47,7 @@
     </table>
   </div>
 
-  <script>window.API_BASE = window.API_BASE || 'http://localhost:5050';</script>
+  <script src="./config.js"></script>
   <script src="./script/admin.js"></script>
 </body>
 </html>
