--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -116,6 +116,7 @@
         <div class="clues-backdrop" id="cluesBackdrop"></div>
     </div>
 
+    <script src="./config.js"></script>
     <script src="./lang/en/en.js"></script>
     <script type="module" src="./script/game/main.js"></script>
     <script src="./script/auth.js"></script>
