--- a/frontend/reset.html
+++ b/frontend/reset.html
@@ -44,6 +44,7 @@
         </div>
     </div>
 
+    <script src="./config.js"></script>
     <script src="./lang/en/en.js"></script>
     <script src="./script/reset.js"></script>
 </body>
