feat(admin): add reset calls endpoint and UI button; usage service now shows games via fallback from generate endpoint and approx tokens when sessions missing

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -28,6 +28,7 @@
         <input id="searchBox" class="input" placeholder="Search username/email" />
         <button id="refreshBtn" class="btn">Refresh</button>
         <button id="exportBtn" class="btn">Export CSV</button>
+        <button id="resetCallsBtn" class="btn btn-warning">Reset Calls</button>
         <a href="./gameplay.html" class="btn">Back</a>
       </div>
     </div>
