feat(ui): add inline free-calls banner next to usage; centralize constants (frontend/backend) and strings (frontend); include free_limit in usage/me; remove free limit alert

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -54,6 +54,7 @@
                 </div>
                 <!-- Desktop buttons -->
                 <div class="user-registration desktop-only">
+                    <span id="freeBanner" class="free-banner" style="display:none; margin-right: 12px;"></span>
                     <a id="adminLink" href="./admin.html" class="btn btn-info" style="display:none; margin-right: 12px;">Admin</a>
                     <span id="apiUsage" class="api-usage" style="display:none; margin-right: 12px;"></span>
                     <button class="btn btn-primary" id="signInBtn">Log In</button>
@@ -118,6 +119,8 @@
 
     <script src="./config.js"></script>
     <script src="./lang/en/en.js"></script>
+    <script src="./script/constants.js"></script>
+    <script src="./script/strings.js"></script>
     <script type="module" src="./script/game/main.js"></script>
     <script src="./script/auth.js"></script>
 </body>
