--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -18,6 +18,7 @@
     .input { padding: 6px 8px; border: 1px solid #ccc; border-radius: 4px; }
     .btn { padding: 6px 10px; border-radius: 4px; border: 1px solid #ccc; cursor:pointer; background:#fff; }
     .btn-primary { background:#0d6efd; color:#fff; border-color:#0d6efd; }
+    .btn-warning { background: #34911a; color: white; }
   </style>
 </head>
 <body>
