clear the game area after user click log out

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -55,7 +55,7 @@
                 <!-- Desktop buttons -->
                 <div class="user-registration desktop-only">
                     <span id="freeBanner" class="free-banner" style="display:none; margin-right: 12px;"></span>
-                    <a id="adminLink" href="./admin.html" class="btn btn-info" style="display:none; margin-right: 12px;">Admin</a>
+                    <a id="adminLink" href="./admin.html" class="btn btn-info" style="display:none; margin-right: 12px; text-align: center;">Admin</a>
                     <span id="apiUsage" class="api-usage" style="display:none; margin-right: 12px;"></span>
                     <button class="btn btn-primary" id="signInBtn">Log In</button>
                 </div>
