--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,79 @@
   <link rel="icon" type="image/png" href="./assets/crossythink_logo.png">
   <link rel="stylesheet" href="./css/styles.css">
   <style>
-    .admin-container { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
-    .admin-header { display:flex; align-items:center; justify-content: space-between; margin-bottom: 16px; }
-    .admin-actions { display:flex; gap: 8px; }
-    .table { width: 100%; border-collapse: collapse; }
-    .table th, .table td { border: 1px solid #ddd; padding: 8px; font-size: 14px; }
-    .table th { background: #f6f6f6; text-align: left; }
-    .muted { color: #666; font-size: 12px; }
-    .badge { padding: 2px 6px; border-radius: 4px; background: #eef; }
-    .input { padding: 6px 8px; border: 1px solid #ccc; border-radius: 4px; }
-    .btn { padding: 6px 10px; border-radius: 4px; border: 1px solid #ccc; cursor:pointer; background:#fff; }
-    .btn-primary { background:#0d6efd; color:#fff; border-color:#0d6efd; }
-    .btn-warning { background: #34911a; color: white; }
+    .admin-container {
+      max-width: 1100px;
+      margin: 24px auto;
+      padding: 0 16px;
+    }
+
+    .admin-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 16px;
+    }
+
+    .admin-actions {
+      display: flex;
+      gap: 8px;
+    }
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .table th,
+    .table td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      font-size: 14px;
+    }
+
+    .table th {
+      background: #f6f6f6;
+      text-align: left;
+    }
+
+    .muted {
+      color: #666;
+      font-size: 12px;
+    }
+
+    .badge {
+      padding: 2px 6px;
+      border-radius: 4px;
+      background: #eef;
+    }
+
+    .input {
+      padding: 6px 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .btn {
+      padding: 6px 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      background: #fff;
+    }
+
+    .btn-primary {
+      background: #0d6efd;
+      color: #fff;
+      border-color: #0d6efd;
+    }
+
+    .btn-warning {
+      background: #34911a;
+      color: white;
+    }
   </style>
 </head>
+
 <body>
   <div class="admin-container">
     <div class="admin-header">
@@ -57,5 +117,5 @@
   <script src="./config.js"></script>
   <script src="./script/admin.js"></script>
 </body>
-</html>
 
+</html>
