--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -28,34 +28,37 @@
                 <div class="mobile-action-icons">
                     <button class="icon-btn icon-btn-hint" id="mobileHintBtn" title="Hint">
                         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/>
+                            <path
+                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z" />
                         </svg>
                     </button>
                     <button class="icon-btn icon-btn-check" id="mobileCheckBtn" title="Check Puzzle">
                         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                            <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
                         </svg>
                     </button>
                     <button class="icon-btn icon-btn-new" id="mobileNewGameBtn" title="New Game">
                         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+                            <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
                         </svg>
                     </button>
                     <button class="icon-btn" id="mobileDefsBtn" title="Definitions">
                         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M3 5h18v14H3zM7 9h10v2H7zM7 13h6v2H7z"/>
+                            <path d="M3 5h18v14H3zM7 9h10v2H7zM7 13h6v2H7z" />
                         </svg>
                     </button>
                     <button class="icon-btn icon-btn-login" id="mobileSignInBtn" title="Log In">
                         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
+                            <path
+                                d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z" />
                         </svg>
                     </button>
                 </div>
                 <!-- Desktop buttons -->
                 <div class="user-registration desktop-only">
                     <span id="freeBanner" class="free-banner" style="display:none; margin-right: 12px;"></span>
-                    <a id="adminLink" href="./admin.html" class="btn btn-info" style="display:none; margin-right: 12px;">Admin</a>
+                    <a id="adminLink" href="./admin.html" class="btn btn-info"
+                        style="display:none; margin-right: 12px;">Admin</a>
                     <span id="apiUsage" class="api-usage" style="display:none; margin-right: 12px;"></span>
                     <button class="btn btn-primary" id="signInBtn">Log In</button>
                 </div>
@@ -108,11 +111,12 @@
 
         <!-- Clues Panel Toggle Button (Mobile & iPad) -->
         <button class="clues-toggle-btn" id="cluesToggleBtn" title="Show Clues">
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
+                stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="9 18 15 12 9 6"></polyline>
             </svg>
         </button>
-        
+
         <!-- Backdrop for mobile clues panel -->
         <div class="clues-backdrop" id="cluesBackdrop"></div>
     </div>
