--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -24,6 +24,7 @@
     .admin-actions {
       display: flex;
       gap: 8px;
+      flex-wrap: wrap; /* allow buttons to wrap so Back stays visible */
     }
 
     .table {
@@ -68,6 +69,18 @@
       background: #fff;
     }
 
+    /* override global .btn width/font just for admin toolbar */
+    .admin-actions .btn {
+      width: auto;
+      font-size: 14px;
+      padding: 8px 12px;
+    }
+
+    .admin-actions .input {
+      height: 36px;
+      font-size: 14px;
+    }
+
     .btn-primary {
       background: #0d6efd;
       color: #fff;
@@ -77,6 +90,12 @@
     .btn-warning {
       background: #34911a;
       color: white;
+    }
+
+    .btn-danger {
+      background: #c53030;
+      color: #fff;
+      border-color: #c53030;
     }
   </style>
 </head>
@@ -95,6 +114,7 @@
         <button id="exportBtn" class="btn">Export CSV</button>
         <button id="resetCallsBtn" class="btn btn-warning">Reset Calls</button>
         <button id="resetTodayBtn" class="btn btn-warning">Reset Today</button>
+        <button id="deleteUserBtn" class="btn btn-danger">Delete User</button>
         <a href="./gameplay.html" class="btn">Back</a>
       </div>
     </div>
@@ -108,6 +128,7 @@
           <th>Calls</th>
           <th>Tokens</th>
           <th>Games</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody></tbody>
