--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -184,7 +184,11 @@
             <option value="Hard">Hard</option>
           </select>
           <!-- Animation Video - shown when grid is empty -->
-          <div class="animation-container" id="animationContainer" style="display: flex; opacity: 1; visibility: visible;">
+          <div
+            class="animation-container"
+            id="animationContainer"
+            style="display: flex; opacity: 1; visibility: visible"
+          >
             <video
               id="introAnimation"
               class="intro-video"
@@ -193,7 +197,7 @@
               playsinline
               loop
             >
-              <source src="./assets/animation.MP4" type="video/mp4" />
+              <source src="./assets/animation.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
           </div>
@@ -211,7 +215,7 @@
 
         <!-- Tablet Clue Panel Header (bottom left 15%) -->
         <div class="tablet-clue-header" id="tabletClueHeader">
-          <span>Clue Panel</span>
+          <img src="./assets/clues.svg" alt="Clue Panel" class="tablet-clue-header-icon" />
         </div>
 
         <!-- Tablet Slide-in Clue Panel (80% height from bottom) -->
