feat(save): add explicit save flow
- Add SavedGame model (JSON columns)
- Add POST /api/save-game endpoint (auth required)
- Remove automatic GameSession persistence in puzzle generation
- Frontend: add save icon/buttons + handler to POST to backend
- Admin: include saved_games cleanup on user delete

--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -38,6 +38,11 @@
           class="svg-button js-check-puzzle-btn"
         />
         <img
+          src="./assets/save.svg"
+          alt="Save Game"
+          class="svg-button js-save-game-btn"
+        />
+        <img
           src="./assets/start.svg"
           alt="New Game"
           id="newGameBtn"
@@ -87,6 +92,13 @@
               class="svg-button js-check-puzzle-btn"
             />
           </div>
+          <div class="tooltip-wrapper" data-tooltip="Save Game">
+            <img
+              src="./assets/save.svg"
+              alt="Save Game"
+              class="svg-button js-save-game-btn"
+            />
+          </div>
         </div>
 
         <!-- Login Section -->
@@ -128,6 +140,13 @@
             alt="Submit Puzzle"
             class="svg-button js-check-puzzle-btn"
             title="Submit Puzzle"
+          />
+
+          <img
+            src="./assets/save.svg"
+            alt="Save Game"
+            class="svg-button js-save-game-btn"
+            title="Save Game"
           />
 
           <img
@@ -244,6 +263,12 @@
             alt="Hint"
             class="svg-button tablet-action-btn js-hint-word-btn"
             title="Hint"
+          />
+          <img
+            src="./assets/save.svg"
+            alt="Save Game"
+            class="svg-button tablet-action-btn js-save-game-btn"
+            title="Save Game"
           />
         </div>
       </div>
