--- a/frontend/gameplay.html
+++ b/frontend/gameplay.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content" />
     <meta name="screen-orientation" content="portrait" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
