add api_statistic table for admin page

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -132,6 +132,16 @@
       </thead>
       <tbody></tbody>
     </table>
+    <div class="muted">Shows API Usage Totals</div>
+    <table class="table" id="apiStatsTable">
+      <thead>
+        <tr>
+          <th>Method</th>
+          <th>Endpoint</th>
+          <th>Requests  </th>
+        </tr>
+      </thead>
+    </table>
   </div>
 
   <script src="./config.js"></script>
