remove hardcoded strings from reset.html

--- a/frontend/reset.html
+++ b/frontend/reset.html
@@ -14,30 +14,30 @@
             <div class="auth-modal-body">
                 <div class="auth-form-section">
                     <div class="auth-form-header">
-                        <h2 id="resetHeader">Reset your password</h2>
-                        <p id="resetSubtitle">Pick a new password to access your account.</p>
+                        <h2 id="resetHeader"></h2>
+                        <p id="resetSubtitle"></p>
                     </div>
                     <div id="msg" class="auth-message" style="display:none"></div>
                     <form id="resetForm" class="auth-form">
                         <div class="form-group">
-                            <label for="newPassword" id="newPasswordLabel">New Password (6-15 chars)</label>
+                            <label for="newPassword" id="newPasswordLabel"></label>
                             <input type="password" id="newPassword" name="password" required minlength="6" maxlength="15">
                         </div>
                         <div class="form-group">
-                            <label for="confirmPassword" id="confirmPasswordLabel">Confirm Password</label>
+                            <label for="confirmPassword" id="confirmPasswordLabel"></label>
                             <input type="password" id="confirmPassword" name="confirmPassword" required minlength="6" maxlength="15">
                         </div>
                         <div class="form-actions">
-                            <button type="submit" class="btn btn-primary" id="resetSubmitBtn">Reset Password</button>
-                            <a class="btn btn-secondary" href="./gameplay.html" id="backToGameBtn">Back to Game</a>
+                            <button type="submit" class="btn btn-primary" id="resetSubmitBtn"></button>
+                            <a class="btn btn-secondary" href="./gameplay.html" id="backToGameBtn"></a>
                         </div>
                     </form>
                 </div>
                 <div class="auth-logo-section">
                     <div class="logo-container">
                         <img src="./assets/crossythink_logo.png" alt="CrossyThink Logo" class="modal-logo">
-                        <h3>CrossyThink</h3>
-                        <p id="resetRightPanel">We'll help you get back in.</p>
+                        <h3 id="crossythinkBranding"></h3>
+                        <p id="resetRightPanel"></p>
                     </div>
                 </div>
             </div>
