add pagination to the admin user api table

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -142,6 +142,11 @@
       </thead>
       <tbody></tbody>
     </table>
+    <div class="pagination-controls">
+      <button id="usagePrevBtn" class="btn"></button>
+      <span id="usagePageNum"></span>
+      <button id="usageNextBtn" class="btn"></button>
+    </div>
     <div class="muted" id="api_usage_subtitle"></div>
     <table class="table" id="apiStatsTable">
       <thead>
